--- a/column.html
+++ b/column.html
@@ -74,7 +74,7 @@
     var menuId = null
     var editRowIndex = null;
     var content_type = [
-//        {value: 1, text: '菜单'},
+        {value: 1, text: '菜单'},
         {value: 2, text: '文档'},
         {value: 3, text: '页面跳转'}
     ]
