--- a/account.html
+++ b/account.html
@@ -26,6 +26,10 @@
 <div id="tb" style="padding:5px;height:auto">
     <div style="margin-bottom:5px">
         <a href="#" class="easyui-linkbutton" iconCls="icon-large-clipart" plain="true" onclick="showjurisdiction()">角色选择</a>
+        <input class="easyui-searchbox" data-options="prompt:'',menu:'#mm',searcher:doSearch" style="width:300px"></input>
+        <div id="mm">
+            <div data-options="name:'name'">姓名</div>
+        </div>
     </div>
 </div>
 <script src="js/common.js"></script>
@@ -282,6 +286,12 @@
 
     }
 
+    function doSearch(value,name){
+        //alert('You input: ' + value+'('+name+')');
+        var postdata = {}
+        postdata[name] = value
+        $("#rolelist").datagrid('reload', postdata)
+    }
 
 </script>
 </body>
