--- a/actionlist.html
+++ b/actionlist.html
@@ -24,7 +24,7 @@
             </tr>
             <tr>
                 <td>内容描述:</td>
-                <td><input class="easyui-validatebox" type="text" name="descs"></input></td>
+                <td><input class="easyui-textbox" data-options="multiline:true" style="width: 100%; height: 50px" type="text" name="descs" /></td>
             </tr>
             <tr>
                 <td>用户类型:</td>
