--- a/comart.html
+++ b/comart.html
@@ -90,6 +90,7 @@
             <tr><td>轮播图上传</td><td>
                 <input class="easyui-filebox" type="text" style="width:300px;" id="bannerupload" buttonText="选择文件" name="bannerupload">
                 <!--<a href="javascript:void(0)" class="easyui-linkbutton" onclick="submitBanner()">上传</a>-->
+            <div>建议上传图片尺寸555像素×305像素，大小不超过1M</div>
             </td></tr>
             <tr>
                 <td>是否显示:</td>
