--- a/contractist.html
+++ b/contractist.html
@@ -203,7 +203,7 @@
                 var postdata = {
                     title: $("input[name=title]").val(),
                     username: $("input[name=username]").val(),
-                    name: $("input[name=name]").val(),
+                    name: $("input[name=name].easyui-validatebox").val(),
                     type: $("input[name=type]").val(),
                     branch: $("input[name=branch]").val(),
                     desc: $("input[name=desc]").val(),
