--- a/feedback.html
+++ b/feedback.html
@@ -23,7 +23,7 @@
                 <td><input class="easyui-validatebox" type="text" name="title"></input></td>
 
                 <td>内容描述:</td>
-                <td><input class="easyui-validatebox" type="text" name="desc"></input></td>
+                <td><input class="easyui-textbox" data-options="multiline:true" style="width: 100%; height: 50px" type="text" name="desc" /></td>
             </tr>
             <tr>
                 <td>用户类型:</td>
