--- a/goodsrequest.html
+++ b/goodsrequest.html
@@ -19,6 +19,10 @@
 <div id="tb" style="padding:5px;height:auto">
     <div style="margin-bottom:5px">
         <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="deleterow()">删除</a>
+        <!--<input class="easyui-searchbox" data-options="prompt:'',menu:'#mm',searcher:doSearch" style="width:300px"></input>-->
+        <!--<div id="mm">-->
+            <!--<div data-options="name:'giftname'">名称</div>-->
+        <!--</div>-->
     </div>
 </div>
 <script src="js/common.js"></script>
@@ -106,6 +110,13 @@
                 }, 'json')
             }
         });
+    }
+
+    function doSearch(value,name){
+        //alert('You input: ' + value+'('+name+')');
+        var postdata = {}
+        postdata[name] = value
+        $("#grlist").datagrid('reload', postdata)
     }
 
 </script>
