--- a/jinxiu.html
+++ b/jinxiu.html
@@ -173,8 +173,8 @@ function showfiles(rowid) { //显示文件列表
                 var filehtml = ''
                 if (filelist.length > 0) {
                     filelist.forEach(function (t, i) {
-                        filehtml += '<div></div><a href="' + commonURL + t.mename + '" target="_blank">下载文件' +
-                                                        (i + 1) +
+                        filehtml += '<div></div><a href="' + commonURL + t.mename + '" target="_blank">下载文件:' +
+                                                        t.name +
                             '</a>'
                     })
                 } else {
