--- a/jrdetail.html
+++ b/jrdetail.html
@@ -22,7 +22,7 @@
 <script src="js/common.js"></script>
 <script>
     $("#goback").click(function () {
-        window.location.href = window.history.back();
+        window.history.back();
     })
     var request = getRequest()
     var appId = request["appId"]
@@ -34,8 +34,8 @@
             var filehtml = ''
             if (filelist.length > 0) {
                 filelist.forEach(function (t, i) {
-                    filehtml += '<div><a href="' + commonURL + t.mename + '" target="_blank">文件' +
-                        (i + 1) +
+                    filehtml += '<div><a href="' + commonURL + t.mename + '" target="_blank">' +
+                       t.name +
                         '</a>' +
                         '</div>'
                 })
