--- a/owmanagement.html
+++ b/owmanagement.html
@@ -48,6 +48,7 @@
             <tr><td>轮播图上传</td><td>
                 <input class="easyui-filebox" type="text" style="width:300px;" id="bannerupload" buttonText="选择文件" name="bannerupload">
                 <!--<a href="javascript:void(0)" class="easyui-linkbutton" onclick="submitBanner()">上传</a>-->
+                <div>建议上传图片尺寸555像素×305像素，大小不超过1M</div>
             </td></tr>
             <tr>
                 <td>是否显示:</td>
@@ -68,8 +69,8 @@
             <tr>
                 <td>标题:</td>
                 <td><input class="easyui-validatebox" type="text" name="title"></input></td>
-                <td></td>
-                <td></td>
+                <td>创建时间：</td>
+                <td><input class="easyui-datetime box" style="width: 120px" type="text" name="createtime" /></td>
             </tr>
             <tr>
                 <td>排序值:</td>
@@ -79,7 +80,8 @@
             </tr>
             <tr>
                 <td>封面</td>
-                <td colspan="3"><input class="easyui-filebox" id="uploadcover" style="width: 300px" buttonText='封面上传' type="text" name="cover_img"><a href="javascript:void(0)" class="easyui-linkbutton" style="margin-left:10px;" onclick="submitCover()">上传</a><input type="hidden" name="coverImg"></td>
+                <td colspan="3"><input class="easyui-filebox" id="uploadcover" style="width: 300px" buttonText='封面上传' type="text" name="cover_img"><a href="javascript:void(0)" class="easyui-linkbutton" style="margin-left:10px;" onclick="submitCover()">上传</a><input type="hidden" name="coverImg">
+                </td>
             </tr>
             <tr>
                 <td>摘要:</td>
@@ -641,6 +643,7 @@
         $.post(commonURL + 'm/news/info.do', {newsId: row.id}, function (json) {
             if(json.success){
                 var data = json.data
+                data.createtime = data.create_timestr
                 $("#uploadcover").filebox("setText", data.cover_img)
                 window.editor.html(data.content)
                 $('#formlist').form('load', data);
