--- a/questionnaire.html
+++ b/questionnaire.html
@@ -16,7 +16,7 @@
        singleSelect="true" fitColumns="true" id="qnlist">
 </table>
 <table class="easyui-datagrid" style="width:100%;height:200px"
-       title="题目列表" toolbar="#tb_children"
+       title="选项列表" toolbar="#tb_children"
        singleSelect="true" fitColumns="true" id="childrenlist">
 </table>
 <div id="addialog" class="easyui-dialog" closed="true" style="width:auto;height:auto;padding:10px">
@@ -27,7 +27,7 @@
                 <td><input class="easyui-validatebox" type="text" name="title"></input></td>
 
                 <td>内容描述:</td>
-                <td><input class="easyui-validatebox" type="text" name="desc"></input></td>
+                <td><input class="easyui-textbox" data-options="multiline:true" style="width: 100%; height: 50px" type="text" name="desc" /></td>
             </tr>
             <tr>
                 <td>用户类型:</td>
