--- a/servicelist.html
+++ b/servicelist.html
@@ -301,8 +301,8 @@
                 var filehtml = ''
                 if (filelist.length > 0) {
                     filelist.forEach(function (t, i) {
-                        filehtml += '<div></div><a href="' + commonURL + t.mename + '" target="_blank">文件' +
-                                                        (i + 1) +
+                        filehtml += '<div></div><a href="' + commonURL + t.mename + '" target="_blank">' +
+                            t.name +
                             '</a>' +
                             '<a href="javascript:;" class="fr" onclick="delfile(\'' + t.id + '\', \'' + rowid + '\')">删除</a></div>'
                     })
