--- a/userdetail.html
+++ b/userdetail.html
@@ -22,7 +22,7 @@
 <script src="js/common.js"></script>
 <script>
     $("#goback").click(function () {
-        window.location.href = window.history.back();
+        window.history.back();
     })
     var request = getRequest()
     var userid = request["userid"]
