--- a/salarytypein.html
+++ b/salarytypein.html
@@ -105,7 +105,7 @@
         <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editrow()">编辑</a>
         <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="deleterow()">删除</a>
         <a href="#" class="easyui-linkbutton" iconCls="icon-large-chart" plain="true" onclick="uploadsalary()">工资导入</a>
-        <a href="files/salarytemplate.xlsx" class="easyui-linkbutton fr" target="_blank">下载工资模板</a>
+        <a href="#" class="easyui-linkbutton fr" id="btn-downloadsalary" target="_blank">下载工资模板</a>
     </div>
 </div>
 <script src="js/common.js"></script>
@@ -118,6 +118,9 @@
 ////        var d = date.getDate();
 //        return y+'-'+m;
 //    }
+
+    $("#btn-downloadsalary").attr("href", commonURL + "m/file/down.do?fileId=3")
+
     var currTime=new Date();
     var strDate=currTime.getFullYear()+"-"+(currTime.getMonth()+1)+"-01";
     $('#ym').datebox({formatter:function(date){
